# Agentic-Web

./: README.md  explaination.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/.sessions/: github.com.json
backend/app/: __init__.py  config.py
backend/app/agents/: __init__.py  prompts.py  web_agent.py
backend/app/api/: routes.py  schemas.py
backend/app/scraper/: __init__.py  browser.py  page_handler.py  screenshot.py
backend/app/services/: agent_service.py  llm_service.py
backend/app/tools/: __init__.py  browser_tools.py  click_tools.py  extraction_tools.py  fill_tools.py  finish_tool.py  form_inspect_tools.py  human_tools.py  navigation_tools.py  screenshot_tools.py  scroll_tools.py  search_tools.py  select_tools.py  tool_registry.py
frontend/: .gitignore  main.py  pyproject.toml
