[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.136.3",
    "lxml>=5.0.0",
    "openai>=1.30.0",
    "playwright>=1.60.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.32",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
